--- a/stlyes.css
+++ b/stlyes.css
@@ -1,14 +1,13 @@
-#page1 .myDiv {
-border: 1px solid green;
-width: 200px;
-}#page2 .myDiv {
-border: 1px solid green;
-width: 200px;
-}#page3 .myDiv {
-border: 1px solid green;
-width: 200px;
+#map {
+	width: 100%;
+	height: 400px;
+	background-color: grey;
 }
-#page4 .myDiv {
-border: 1px solid green;
-width: 200px;
+#map_wrapper {
+    height: 400px;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 100%;
 }
