--- a/stlyes.css
+++ b/stlyes.css
@@ -1,13 +1,17 @@
-#map {
+.map {
 	width: 100%;
 	height: 400px;
 	background-color: grey;
+	float: left;
 }
-#map_wrapper {
+/*#map_wrapper {
     height: 400px;
 }
 
 #map_canvas {
     width: 100%;
     height: 100%;
+}*/
+.flex{
+	display:-webkit-flex;
 }
