--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,9 @@
 	background-color: green;
 display: flex;
 	width: 100%;
-
-	/*padding: px;*/
 }
-/*.pic1{
-	display: flex;
-	position: absolute; right: 10px;
 
-}*/
+
 .Heading-and-picture-shoe{
 	display: flex;
 	flex-direction: row;
@@ -41,7 +36,7 @@ display: flex;
 	background-color: purple;
 	display:flex;
 	flex-flow: row nowrap;
-	
+
 	width:100%;
 }
 .bio-of-me{
@@ -49,4 +44,14 @@ display: flex;
 	display: flex;
 	flex-direction: row;
 
+}
+
+
+#map_wrapper {
+    height: 400px;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 100%;
 }
