--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 	width: 960px;
 	/*height: 400px;*/
 	background-color: black;
-
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
@@ -10,8 +9,12 @@
 .map iframe {
 	margin: 15px 2px 15px 8px;
 }
+#map {
+		height:50vh;
+		width: 50vw;
+}
 .container-Find-an-Experience{
-	background-color: green;
+	background-color: rgb(22, 247, 10);
 display: flex;
 	width: 100%;
 }
