--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,8 @@
 .map iframe {
 	margin: 15px 2px 15px 8px;
 }
-#map {
-		height:50vh;
-		width: 50vw;
-}
+
+
 .container-Find-an-Experience{
 	background-color: rgb(22, 247, 10);
 display: flex;
@@ -49,12 +47,12 @@ display: flex;
 
 }
 
-
 #map_wrapper {
     height: 400px;
 }
 
-#map_canvas {
-    width: 100%;
-    height: 100%;
-}
+#map_canvas{
+		height:100%;
+		width: 100%;
+		margin:0;
+		padding:0px;
